<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_personal_data"
            android:title="@string/nav_account"
            android:visible="false"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_menu_reservation"
            android:title="@string/nav_reservation" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_comments"
            android:title="@string/nav_comments" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>


</menu>
