<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservacionActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">


                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_nombre"/>

                <EditText
                    android:id="@+id/et_Nombre"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_below="@+id/tvNombre"
                    />

                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_telefono"
                    android:layout_below="@+id/et_Nombre"/>

                <EditText
                    android:id="@+id/et_Telefono"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_below="@+id/tvTelefono"
                    />

                <TextView
                    android:id="@+id/tvSeleccionarFecha"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_seleccionar_dia"
                    android:layout_below="@+id/et_Telefono"/>

                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_reservar_fecha_border"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:onClick="onClick"
                    android:layout_below="@+id/tvSeleccionarFecha"
                    />

                <TextView
                    android:id="@+id/tvSeleccionarHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnDate"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_seleccionar_hora"/>

                <Spinner
                    android:id="@+id/spinnerHora"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/tvSeleccionarHora"
                    >
                </Spinner>


                <TextView
                    android:id="@+id/tvSeleccionarPersonas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinnerHora"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_seleccionar_personas"/>

                <Spinner
                    android:id="@+id/spinnerPersonas"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/tvSeleccionarPersonas">
                </Spinner>

                <TextView
                    android:id="@+id/tvComentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinnerPersonas"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="@string/reservacion_comentario"/>

                <EditText
                    android:id="@+id/et_Comentario"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:layout_below="@+id/tvComentario"
                    />


                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnReservar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_reservar_border"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:onClick="onClick"
                    android:text="@string/reservacion_btn_reservar"
                    android:layout_below="@+id/et_Comentario"
                    />

                <ProgressBar
                    android:layout_marginTop="10dp"
                    android:id="@+id/progress_bar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_toRightOf="@+id/btnReservar"
                    android:layout_below="@id/et_Comentario"

                    />


            </RelativeLayout>

        </android.support.v7.widget.CardView>



    </ScrollView>





</LinearLayout>