<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginEmailPasswordActivity"
    android:background="@mipmap/fondo2"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/button_close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/cross"
                    android:onClick="onClick"/>

            </LinearLayout>

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/txt_email"
                android:textColorHint="#000000"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_account_circle"
                android:layout_marginTop="50dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:inputType="textPassword"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/txt_password"
                android:textColorHint="#000000"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_security"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"/>

            <TextView
                android:id="@+id/button_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_email_forgot_pasword"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#1f1fca"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/button_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_register"
                android:text="@string/txt_login_password"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:padding="16dp"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:onClick="onClick"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>